# leadray

./: .env  .gitignore  Dockerfile  docker-compose.yml  need  pyproject.toml  r.bat
app/: dependency.py  exeception.py  main.py
app/api/: __init__.py  tasks.py
app/core/: celery_app.py  config.py
app/infrastructure/db/: session.py
app/models/: __init__.py  base.py  company.py  lead.py  task.py
app/repository/: __init__.py  leads.py  tasks.py
app/schema/: __init__.py  lead.py  task.py
app/services/: __init__.py  tasks.py
app/services/scrapers/: google_search.py
app/worker/: tasks.py
