[project]
name = "leadray"
version = "0.1.0"
description = ""
authors = [
    {name = "moof-dev",email = "moof.error@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.1,<0.136.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "celery (>=5.6.2,<6.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "redis (>=7.2.1,<8.0.0)",
    "kombu (>=5.6.2,<6.0.0)",
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
